--- a/projectx/templates/index.html
+++ b/projectx/templates/index.html
@@ -1,23 +1,60 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<title>AIDS - Automated Intelligent Delivery System</title>
-<head>
-</head>	
-	<br>
-	<br>
-	<form id="user_info_form" action="{% url 'index' %}" method="post">
-		<input type="text" class="form-control" placeholder="User Id" id="userid">
-		<br>
-		<input type="text" class="form-control" placeholder="Transaction Amount" id="amount" style= "margin-top : 10px">
-		<br>
-		<br>
-		Mode of Payment
-		<input type="radio" name="sex" value="male" style = "margin-top: -10px" checked> Online
-	    <br>
-	    <input type="radio" name="sex" value="female"> Cash On Delivery
-	</form>
-<body>
-</body>	
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<title>
+			AIDS - Automated Intelligent Delivery System
+		</title>
+		<link href="{% static 'css/index.css' %}" rel="stylesheet">
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+		<script src="{% static 'js/index.js' %}"></script>
+	</head>
+	<body>
+		{% if msg %}
+			<hgroup>
+				<h1>
+					{{msg}}
+				</h1>
+			</hgroup>
+		<hgroup>
+			<h1>
+				AIDS - Automated Intelligent Delivery System
+			</h1>
+			<h3>
+				By bhayanak_maut
+			</h3>
+		</hgroup>
+		<form method="POST">
+			{% csrf_token %}
+			<div class="group">
+				<input type="email" name='email' required=True><span class="highlight"></span><span class="bar"></span>
+				<label>Email</label>
+			</div>
+			<div class="group">
+				<input type="text" name='amount' required=True><span class="highlight"></span><span class="bar"></span>
+				<label>Transaction Amount</label>
+			</div>
+			<div class="group">
+				<input type="text" name='address1' required=True><span class="highlight"></span><span class="bar"></span>
+				<label>Address Line 1</label>
+			</div>
+			<div class="group">
+				<input type="text" name='address2' required=True><span class="highlight"></span><span class="bar"></span>
+				<label>Address Line 2</label>
+			</div>
+			<div class="group">
+				<input type="text" name='city' required=True><span class="highlight"></span><span class="bar"></span>
+				<label>City</label>
+			</div>
+			<div class="group">
+				<input type="text" name='pincode' required=True><span class="highlight"></span><span class="bar"></span>
+				<label>Pincode</label>
+			</div>
+			<button type="submit" class="button buttonBlue">
+				Check
+				<div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+			</button>
+		</form>
+	</body>	
 </html>
