--- a/projectx/templates/report.html
+++ b/projectx/templates/report.html
@@ -30,7 +30,7 @@
 					<label>Pincode</label>
 				</div>
 				<div class="group">
-					<input type="text" name='pincode' required=True><span class="highlight"></span><span class="bar"></span>
+					<input type="text" name='delivery_successful_or_not' required=True><span class="highlight"></span><span class="bar"></span>
 					<label>Delivery Successful 0/1</label>
 				</div>
 				<button type="submit" class="button buttonBlue">
