--- a/projectx/templates/result.html
+++ b/projectx/templates/result.html
@@ -24,8 +24,13 @@
 				{{res}}
 			</div>
 			<div class="mdl-card__actions mdl-card--border">
-				<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-					Get Started
+				<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="/">
+					Home
+				</a>
+			</div>
+			<div class="mdl-card__actions mdl-card--border">
+				<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="/report">
+					Add data
 				</a>
 			</div>
 		</div>
